# shebangMarkdownIDE

./: README.md  pyproject.toml  requirements.txt
src/shebangMarkdownIDE/: __init__.py  app.py  cli.py
